--- a/desc_open.html
+++ b/desc_open.html
@@ -123,7 +123,10 @@
 							<p><span>Скидка предоставляется на весь товар, не участвующий в акциях, при сумме покупки более <strong>500 р.</strong></span></p>
 							<div class="_btn">Подробнее</div>
 						</div>
-						<img class="stock" src="images/s_banner/s_banner-3__card.png" alt="">
+						<div class="s_banner-3__right_img">
+							<img class="stock" src="images/s_banner/s_banner-3__card.png" alt="">
+							<span>10 <small>%</small><b>Скидка</b></span>
+						</div>
 					</div>
 				</div>
 			</div>
