--- a/desc_open.html
+++ b/desc_open.html
@@ -206,6 +206,37 @@
 								</div>
 							</div>
 						</div>
+						<div id="respond" class="comment-respond">
+							<small><a rel="nofollow" id="cancel-comment-reply-link" href="/discounts/nazvanie-uslugi/#respond" style="display:none;">Отменить ответ</a></small><p class="must-log-in">Чтобы оставить комментарий необходимо авторизоваться</p><script>
+							(function(u,l,o,g,i,n){
+								if(typeof l[g] === 'undefined') l[g] = [];
+								l[i] = function() {
+									if(l[g].length){
+										for (var i = 0; i < l[g].length; i++) {
+											var f = l[g][i];
+											if(typeof f === 'function'){
+												f.call(l);
+											}
+											l[g].splice(i--,1)
+										}
+									}
+								};
+								if(typeof l[o] === 'undefined'){
+									l[o] = {};
+									l[o][n] = function(){
+										var args = arguments;
+										l[g].push(function () {
+											l[o].customInit.apply(l[o], args);
+										});
+									};
+								}
+								var s = u.createElement('script');
+								s.src = '//ulogin.ru/js/ulogin.js?version=1';
+								s.async = true;
+								s.onload = l[i];
+								u.getElementsByTagName('head')[0].appendChild(s);
+							})(document,window,'uLogin','uLoginCallbacks','uLoginOnload','customInit');
+							</script><div class="ulogin_block"><div class="ulogin_label">Войти с помощью:&nbsp;</div><div id="uLogin05847321" class="ulogin_panel" data-ulogin="display=small;providers=vkontakte,odnoklassniki,mailru,facebook;hidden=other;fields=first_name,last_name,email,photo,photo_big;optional=phone;redirect_uri=http%3A%2F%2Fmy.markello.info%2F%3Fulogin%3Dtoken%26backurl%3Dhttp%253A%252F%252Fmy.markello.info%252Fdiscounts%252Fnazvanie-uslugi%252F%2523commentform;" data-ulogin-inited="1504882211381" style="position: relative;"><div class="ulogin-buttons-container" style="margin: 0px; padding: 0px; outline: none; border: none; border-radius: 0px; cursor: default; float: none; position: relative; display: inline-block; width: 105px; height: 16px; left: 0px; top: 0px; box-sizing: content-box; max-width: 100%; min-height: 16px; vertical-align: top; line-height: 0;"><div class="ulogin-button-vkontakte" data-uloginbutton="vkontakte" role="button" title="VK" style="margin: 0px 5px 5px 0px; padding: 0px; outline: none; border: none; border-radius: 0px; cursor: pointer; float: left; position: relative; display: inherit; width: 16px; height: 16px; left: 0px; top: 0px; box-sizing: content-box; background: url(&quot;https://ulogin.ru/version/2.0/img/providers-16-classic.png?version=img.2.0.0&quot;) 0px -18px / 16px no-repeat;"></div><div class="ulogin-button-odnoklassniki" data-uloginbutton="odnoklassniki" role="button" title="Odnoklassniki" style="margin: 0px 5px 5px 0px; padding: 0px; outline: none; border: none; border-radius: 0px; cursor: pointer; float: left; position: relative; display: inherit; width: 16px; height: 16px; left: 0px; top: 0px; box-sizing: content-box; background: url(&quot;https://ulogin.ru/version/2.0/img/providers-16-classic.png?version=img.2.0.0&quot;) 0px -35px / 16px no-repeat;"></div><div class="ulogin-button-mailru" data-uloginbutton="mailru" role="button" title="Mail.ru" style="margin: 0px 5px 5px 0px; padding: 0px; outline: none; border: none; border-radius: 0px; cursor: pointer; float: left; position: relative; display: inherit; width: 16px; height: 16px; left: 0px; top: 0px; box-sizing: content-box; background: url(&quot;https://ulogin.ru/version/2.0/img/providers-16-classic.png?version=img.2.0.0&quot;) 0px -52px / 16px no-repeat;"></div><div class="ulogin-button-facebook" data-uloginbutton="facebook" role="button" title="Facebook" style="margin: 0px 5px 5px 0px; padding: 0px; outline: none; border: none; border-radius: 0px; cursor: pointer; float: left; position: relative; display: inherit; width: 16px; height: 16px; left: 0px; top: 0px; box-sizing: content-box; background: url(&quot;https://ulogin.ru/version/2.0/img/providers-16-classic.png?version=img.2.0.0&quot;) 0px -69px / 16px no-repeat;"></div><img class="ulogin-dropdown-button" src="https://ulogin.ru/img/blank.gif" style="margin: 0px 5px 5px 0px; padding: 0px; outline: none; border: none; border-radius: 0px; cursor: pointer; float: none; position: relative; display: inline; width: 16px; height: 16px; left: 0px; top: 0px; box-sizing: content-box; background: url(&quot;https://ulogin.ru/version/2.0/img/providers-16-classic.png?version=img.2.0.0&quot;) 0px -1px / 16px no-repeat; vertical-align: baseline;"></div><img src="https://ulogin.ru/img/link.png" style="margin: 0px; padding: 0px; outline: none; border: none; border-radius: 0px; cursor: default; float: none; position: absolute; display: none; width: 8px; height: 4px; left: 0px; top: 0px; box-sizing: content-box; z-index: 9999;"></div><div style="clear:both"></div></div><script>uLogin.customInit('uLogin05847321')</script>	</div>
 					</div>
 				</div>
 				<div class="c_content__right">
